--- a/index.html
+++ b/index.html
@@ -19,3 +19,10 @@
 </body>
 
 </html>
+const botaoMostraPalavras = document.querySelector('#botao-palavrachave');
+
+botaoMostraPalavras.addEventListener('click', mostraPalavrasChave);
+
+function mostraPalavrasChave() {
+    alert('fui clicado!');
+}
