--- a/index.html
+++ b/index.html
@@ -51,3 +51,11 @@ function mostraPalavrasChave() {
     <script src="script.js"></script> 
   </body> 
 </html> 
+
+const botaoMostraPalavras = document.querySelector("#botao-palavrachave"); 
+
+botaoMostraPalavras.addEventListener("click", mostraPalavrasChave); 
+
+function mostraPalavrasChave() { 
+  alert("fui clicado!"); 
+} 
